---
source: kyanite-core/src/ast/mod.rs
expression: ast
---
Ast {
    nodes: [
        Constant(
            ConstantDecl {
                name: Token {
                    kind: Identifier,
                    lexeme: Some(
                        "FOO",
                    ),
                    span: Span {
                        line: 1,
                        column: 7,
                        length: 3,
                    },
                },
                ty: Token {
                    kind: Identifier,
                    lexeme: Some(
                        "float",
                    ),
                    span: Span {
                        line: 1,
                        column: 12,
                        length: 5,
                    },
                },
                expr: Float(
                    5.0,
                    Token {
                        kind: Literal,
                        lexeme: Some(
                            "5.",
                        ),
                        span: Span {
                            line: 1,
                            column: 20,
                            length: 2,
                        },
                    },
                ),
            },
        ),
        Function(
            FuncDecl {
                name: Token {
                    kind: Identifier,
                    lexeme: Some(
                        "mulByTwo",
                    ),
                    span: Span {
                        line: 3,
                        column: 5,
                        length: 8,
                    },
                },
                params: [
                    Param {
                        name: Token {
                            kind: Identifier,
                            lexeme: Some(
                                "lhs",
                            ),
                            span: Span {
                                line: 3,
                                column: 14,
                                length: 3,
                            },
                        },
                        ty: Token {
                            kind: Identifier,
                            lexeme: Some(
                                "float",
                            ),
                            span: Span {
                                line: 3,
                                column: 19,
                                length: 5,
                            },
                        },
                    },
                    Param {
                        name: Token {
                            kind: Identifier,
                            lexeme: Some(
                                "rhs",
                            ),
                            span: Span {
                                line: 3,
                                column: 26,
                                length: 3,
                            },
                        },
                        ty: Token {
                            kind: Identifier,
                            lexeme: Some(
                                "int",
                            ),
                            span: Span {
                                line: 3,
                                column: 31,
                                length: 3,
                            },
                        },
                    },
                ],
                ty: Some(
                    Token {
                        kind: Identifier,
                        lexeme: Some(
                            "float",
                        ),
                        span: Span {
                            line: 3,
                            column: 37,
                            length: 5,
                        },
                    },
                ),
                body: [
                    Var(
                        VarDecl {
                            name: Token {
                                kind: Identifier,
                                lexeme: Some(
                                    "rhs",
                                ),
                                span: Span {
                                    line: 4,
                                    column: 9,
                                    length: 3,
                                },
                            },
                            ty: Token {
                                kind: Identifier,
                                lexeme: Some(
                                    "float",
                                ),
                                span: Span {
                                    line: 4,
                                    column: 14,
                                    length: 5,
                                },
                            },
                            expr: Float(
                                8.0,
                                Token {
                                    kind: Literal,
                                    lexeme: Some(
                                        "8.",
                                    ),
                                    span: Span {
                                        line: 4,
                                        column: 22,
                                        length: 2,
                                    },
                                },
                            ),
                        },
                    ),
                    Return(
                        Return {
                            expr: Binary(
                                Binary {
                                    left: Binary(
                                        Binary {
                                            left: Ident(
                                                Ident {
                                                    name: Token {
                                                        kind: Identifier,
                                                        lexeme: Some(
                                                            "lhs",
                                                        ),
                                                        span: Span {
                                                            line: 5,
                                                            column: 12,
                                                            length: 3,
                                                        },
                                                    },
                                                },
                                            ),
                                            op: Token {
                                                kind: Star,
                                                lexeme: None,
                                                span: Span {
                                                    line: 5,
                                                    column: 16,
                                                    length: 1,
                                                },
                                            },
                                            right: Ident(
                                                Ident {
                                                    name: Token {
                                                        kind: Identifier,
                                                        lexeme: Some(
                                                            "rhs",
                                                        ),
                                                        span: Span {
                                                            line: 5,
                                                            column: 18,
                                                            length: 3,
                                                        },
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                    op: Token {
                                        kind: Plus,
                                        lexeme: None,
                                        span: Span {
                                            line: 5,
                                            column: 22,
                                            length: 1,
                                        },
                                    },
                                    right: Ident(
                                        Ident {
                                            name: Token {
                                                kind: Identifier,
                                                lexeme: Some(
                                                    "FOO",
                                                ),
                                                span: Span {
                                                    line: 5,
                                                    column: 24,
                                                    length: 3,
                                                },
                                            },
                                        },
                                    ),
                                },
                            ),
                            keyword: Token {
                                kind: Return,
                                lexeme: None,
                                span: Span {
                                    line: 5,
                                    column: 5,
                                    length: 6,
                                },
                            },
                        },
                    ),
                ],
                external: false,
                id: 0,
            },
        ),
        Function(
            FuncDecl {
                name: Token {
                    kind: Identifier,
                    lexeme: Some(
                        "main",
                    ),
                    span: Span {
                        line: 8,
                        column: 5,
                        length: 4,
                    },
                },
                params: [],
                ty: None,
                body: [
                    Var(
                        VarDecl {
                            name: Token {
                                kind: Identifier,
                                lexeme: Some(
                                    "a",
                                ),
                                span: Span {
                                    line: 9,
                                    column: 9,
                                    length: 1,
                                },
                            },
                            ty: Token {
                                kind: Identifier,
                                lexeme: Some(
                                    "float",
                                ),
                                span: Span {
                                    line: 9,
                                    column: 12,
                                    length: 5,
                                },
                            },
                            expr: Float(
                                5.0,
                                Token {
                                    kind: Literal,
                                    lexeme: Some(
                                        "5.",
                                    ),
                                    span: Span {
                                        line: 9,
                                        column: 20,
                                        length: 2,
                                    },
                                },
                            ),
                        },
                    ),
                    Var(
                        VarDecl {
                            name: Token {
                                kind: Identifier,
                                lexeme: Some(
                                    "b",
                                ),
                                span: Span {
                                    line: 10,
                                    column: 9,
                                    length: 1,
                                },
                            },
                            ty: Token {
                                kind: Identifier,
                                lexeme: Some(
                                    "int",
                                ),
                                span: Span {
                                    line: 10,
                                    column: 12,
                                    length: 3,
                                },
                            },
                            expr: Int(
                                7,
                                Token {
                                    kind: Literal,
                                    lexeme: Some(
                                        "7",
                                    ),
                                    span: Span {
                                        line: 10,
                                        column: 18,
                                        length: 1,
                                    },
                                },
                            ),
                        },
                    ),
                    Expr(
                        Call(
                            Call {
                                left: Ident(
                                    Ident {
                                        name: Token {
                                            kind: Identifier,
                                            lexeme: Some(
                                                "mulByTwo",
                                            ),
                                            span: Span {
                                                line: 11,
                                                column: 5,
                                                length: 8,
                                            },
                                        },
                                    },
                                ),
                                args: [
                                    Ident(
                                        Ident {
                                            name: Token {
                                                kind: Identifier,
                                                lexeme: Some(
                                                    "a",
                                                ),
                                                span: Span {
                                                    line: 11,
                                                    column: 14,
                                                    length: 1,
                                                },
                                            },
                                        },
                                    ),
                                    Ident(
                                        Ident {
                                            name: Token {
                                                kind: Identifier,
                                                lexeme: Some(
                                                    "b",
                                                ),
                                                span: Span {
                                                    line: 11,
                                                    column: 17,
                                                    length: 1,
                                                },
                                            },
                                        },
                                    ),
                                ],
                                parens: (
                                    Token {
                                        kind: LeftParen,
                                        lexeme: None,
                                        span: Span {
                                            line: 11,
                                            column: 13,
                                            length: 1,
                                        },
                                    },
                                    Token {
                                        kind: RightParen,
                                        lexeme: None,
                                        span: Span {
                                            line: 11,
                                            column: 18,
                                            length: 1,
                                        },
                                    },
                                ),
                                delimiters: [
                                    Token {
                                        kind: Comma,
                                        lexeme: None,
                                        span: Span {
                                            line: 11,
                                            column: 15,
                                            length: 1,
                                        },
                                    },
                                ],
                            },
                        ),
                    ),
                ],
                external: false,
                id: 0,
            },
        ),
    ],
}
